# funcy

./: CMakeLists.txt  LICENSE  README.md  main.cpp
funcy/: funcy.h  iter.h  option.h  range.h
